--- a/app/zehnselect/zehnselect.component.html
+++ b/app/zehnselect/zehnselect.component.html
@@ -16,23 +16,20 @@
                 <td>
 
                     <div ngbDropdown class="d-inline-block" [id]="'dropdown-container-' + u.id" id="dropdown-container" (click)="stopPropagation($event)">
-                       
-                        
                         <button  class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton" ngbDropdownToggle (click)="toggleDropdown(+u.id)">
                             <span style="margin-left: 10px;">
                               {{ getSelectedItemsCount() > 0 ? getSelectedItemsCount() + ' templates selected' : 'No templates selected' }}
                             </span>
                           </button>
-                          
-
-
+                        
+                        
                         <div class="dropdown">
                             <div class="dropdown-menu"
                                 aria-labelledby="dropdownMenuButton"
                                 ngbDropdownMenu>
                                 <div class="row">
                                   
-                                        <input type="text" class="" id="myInput" (keyup)="myFunction()" placeholder="Search for names.." title="Type in a name">
+                                        <input type="text" class="" class="myInput" [id]="'myInput-' + u.id" (keyup)="myFunction(+u.id)" placeholder="Search for names.." title="Type in a name">
                                         <div class="zehnline"><hr></div>
                                     <div class="col-md-5 mt-2">
                                         <ul>
@@ -54,7 +51,7 @@
 
                                     <div class="col-md-5 list mt-2">
                                         <div class="noItemsMessage" *ngIf="selectedCategory?.items.length == 0">No items Available</div>
-                                            <ul class="ulelement" id="myUL" *ngIf="selectedCategory?.items.length> 0">
+                                            <ul class="ulelement" id="myUL" [id]="'myUL-' + u.id" *ngIf="selectedCategory?.items.length> 0">
                                            
                                            
                                             <li id="it" class="lelementt">
@@ -68,12 +65,7 @@
                                             </li>
 
                                            
-                                              <!-- <li class="lelement" *ngFor="let item of selectedCategory?.items">
-                                                <span>
-                                                  <input type="checkbox" [(ngModel)]="item.checked" [checked]="item.status === 'checked'" (change)="onItemChecked()">
-                                                  <span class="item-name" [ngClass]="{ 'long-item-name': item.itemName.length > 10 }" [title]="item.itemName">{{ item.itemName }}</span>
-                                                </span>
-                                              </li> -->
+                                
                                               <li class="lelement" *ngFor="let item of selectedCategory?.items">
                                                 <span>
                                                   <input type="checkbox" [(ngModel)]="item.checked" [checked]="item.status === 'checked'" (change)="onItemChecked()">
@@ -85,7 +77,7 @@
                                               
                                               
                                               
-                                              <li id="noItemsMessage" style="display:none;">No matching items found.</li>
+                                              <li id="noItemsMessage" [id]="'noItemsMessage-' + u.id" style="display:none;">No matching items found.</li>
                                          </ul>
                                     </div>
                                 </div>
